# taskslib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Readme.md  ResourcePool.h  Task.cpp  Task.h  TasksQueue.h  cmake_Linux.sh  cmake_vs2017_x64.bat
docs/: Api.md  Architecture.adoc  Architecture.md  Build.md
src/: CMakeLists.txt  ResourcePool.h  Task.cpp  Task.h  TaskOptions.cpp  TaskOptions.h  TasksQueue.cpp  TasksQueue.h  TasksQueueContainer.cpp  TasksQueueContainer.h  TasksQueuesContainer.cpp  TasksQueuesContainer.h  TasksThread.h  Types.h
src/include/taskslib/: ResourcePool.h  TaskOptions.h  TasksThread.h
test/: CMakeLists.txt  TestResourcePool.cpp  TestSingleton.cpp  TestTargets.cmake  TestTask.cpp  TestTaskOptions.cpp  TestTasksQueue.cpp  TestTasksQueueContainer.cpp  TestTasksThread.cpp  TestTools.h  test_task.cpp
